Fixing Camera Movement

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -43,6 +43,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="ZoomReset",Key=MiddleMouseButton,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Pan",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="PanReset",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=True,bCmd=False)
++ActionMappings=(ActionName="SpeedModifier",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SpeedModifier",Key=RightShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
