Necessary codes are added for steam connectivity

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,3 +10,11 @@ UsePakFile=False
 IncludePrerequisites=False
 FullRebuild=False
 
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=True
++StartupMovies=unreal engine 4 intro
++StartupMovies=Nvidia intro
++StartupMovies=odtu_intro
+
+
